<resources>
    <string name="app_name">TrashTag</string>
    <string name="button">First Name</string>
    <string name="fab_trash_Name">New Trash</string>
    <string name="fab_recycle_Name">Recyclable</string>
    <string name="fab_new_Name">New Pin</string>
    <string name="fab_del_Name">Delete</string>
    <string name="title_activity_profile">Profile</string>
    <string name="mapBtnText">View Map</string>
    <string name="Back">home</string>
    <string name="home">Home</string>
    <string name="sign_out">Sign Out</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="back">Back</string>
    <string name="my_profile">My Profile</string>
    <string name="about">About</string>
    <string name="logo">trashtag_logo</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="profile_pic">Profile_pic</string>
    <string name="stars">Stars for picking up pins</string>
    <string name="trash_pins">How many trash pins a user has picked up.</string>
    <string name="recyclable_pins">How many recyclable pins a user has picked up.</string>

    <string name="trashtag">#TrashTag</string>

    <string name="about_trashtag">About #TrashTag</string>
    <string name="creators">Creators:</string>
    <string name="creators_names">Thomas Pipher Jansen Howell Shankar Sharma Long Li</string>
    <string name="about_text">TrashTag has a one mission: To make the world a cleaner place. We, the creators of TrashTag, aspired to create a useful tool to bring communities, organizations, non-profits, or just a group of friends together to preserve our most precious gift.</string>
    <string name="about_logo">Logos for decor</string>
    <string name="repo">GitHub Repo: https://github.com/jbentleyh/CSC-414-Project.com </string>
    <string name="trashPlaced">trash pins placed</string>
    <string name="recyclePlaced">recyclable pins placed</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="title_activity_bottom_nav">bottom_nav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


</resources>
