<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF3D4"
    tools:context=".Profile">

 <ImageView
     android:id="@+id/default_avatar"
     android:layout_width="291dp"
     android:layout_height="202dp"
     android:layout_marginStart="48dp"
     android:layout_marginTop="16dp"
     android:layout_marginEnd="48dp"
     android:contentDescription="@string/profile_pic"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.666"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:srcCompat="@mipmap/ic_launcher_round" />

 <ImageView
     android:id="@+id/recyclable_pins"
     android:layout_width="40dp"
     android:layout_height="47dp"
     android:layout_marginStart="12dp"
     android:layout_marginTop="12dp"
     android:background="#00000000"
     android:contentDescription="@string/recyclable_pins"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/stars"
     app:srcCompat="@drawable/ic_recycle" />

 <ImageView
     android:id="@+id/stars"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
     android:background="#00000000"
     android:contentDescription="@string/stars"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/username"
     app:srcCompat="@android:drawable/btn_star_big_on" />

 <TextView
     android:id="@+id/username"
     android:layout_width="131dp"
     android:layout_height="43dp"
     android:layout_marginStart="120dp"
     android:layout_marginTop="20dp"
     android:background="#00000000"
     android:clickable="false"
     android:fontFamily="sans-serif"
     android:text="@string/username"
     android:textSize="26sp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.0"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/default_avatar" />

 <ImageView
     android:id="@+id/trash_pins"
     android:layout_width="46dp"
     android:layout_height="39dp"
     android:layout_marginStart="8dp"
     android:layout_marginTop="8dp"
     android:background="#00000000"
     android:contentDescription="@string/trash_pins"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/recyclable_pins"
     app:srcCompat="@drawable/ic_trashicon" />

</androidx.constraintlayout.widget.ConstraintLayout>