<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CEF1CF"
    tools:context=".MainMenu">

    <Button
        android:id="@+id/btnMap"
        android:layout_width="266dp"
        android:layout_height="55dp"
        android:layout_marginTop="60dp"
        android:background="#8EE22C"
        android:text="@string/mapBtnText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profile_id"
        android:layout_width="273dp"
        android:layout_height="51dp"
        android:layout_marginTop="300dp"
        android:background="#8EE22C"
        android:text="@string/my_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMap" />

    <Button
        android:id="@+id/settings_id"
        android:layout_width="129dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        android:background="#8EE22C"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="@+id/profile_id"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/profile_id"
        app:layout_constraintTop_toBottomOf="@+id/profile_id" />

    <Button
        android:id="@+id/about_id"
        android:layout_width="129dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        android:background="#8EE22C"
        android:text="@string/about"
        app:layout_constraintEnd_toEndOf="@+id/profile_id"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/profile_id"
        app:layout_constraintTop_toBottomOf="@+id/profile_id" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="343dp"
        android:layout_height="287dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/profile_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMap"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@mipmap/trashtag_logo_foreground" />

</androidx.constraintlayout.widget.ConstraintLayout>